# historia-new

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  Makefile.am  README.md  SECURITY.md  configure.ac  libhistoriaconsensus.pc  libhistoriaconsensus.pc.in
.tx/: config
build-aux/m4/: bitcoin_qt.m4
ci/historia/: build-docker.sh  build_depends.sh  build_src.sh  matrix.sh  push-docker.sh  test_integrationtests.sh  test_unittests.sh
ci/test/: 00_setup_env.sh  00_setup_env_native_cxx20.sh  00_setup_env_native_fuzz.sh  00_setup_env_native_tsan.sh  05_before_script.sh
contrib/: README.md  gitian-build.py  historia-cli.bash-completion  historia-qt.pro  historiad.bash-completion  install_db4.sh  valgrind.supp
contrib/auto_gdb/: common_helpers.py  historia_dbg.sh  log_size.py  simple_class_obj.py  stl_containers.py  used_size.py
contrib/containers/: README.md
contrib/debian/: control  copyright  historia-qt.desktop  rules
contrib/devtools/: README.md  (+7 more)
depends/: README.md  description.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  files.md  fuzzing.md  gitian-building.md  guix.md  historia-conf.md  i2p.md  init.md  masternode-budget.md  productivity.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  historia-cli.1  historia-qt.1  historia-tx.1  historia-wallet.1  historiad.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  addressindex.cpp  addressindex.h  batchedlogger.cpp  batchedlogger.h  bip39_english.h  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-wallet.cpp  bitcoind.cpp  cachemap.h  cachemultimap.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  context.h  dsnotificationinterface.cpp  dummywallet.cpp  flat-database.h  hash.cpp  hash.h  hdchain.cpp  hdchain.h  historia-cli-res.rc  historia-tx-res.rc  historia-wallet-res.rc  historiad-res.rc  init.cpp  init.h  key_io.cpp  logging.cpp  logging.h  (+29 more)
src/historiabls/rust-bindings/bls-signatures/: Cargo.toml
src/historiabls/rust-bindings/bls-signatures/src/: elements.rs  lib.rs  private_key.rs  schemes.rs  utils.rs
src/historiabls/rust-bindings/bls-signatures/src/bip32/: chain_code.rs  private_key.rs  public_key.rs
src/historiabls/src/: CMakeLists.txt  legacy.cpp  threshold.cpp
test/: README.md  get_previous_releases.py
(+557 files in other folders)
